Jared/user detail styles (#255)
* styles for boxes

* style form for edit users

* back button

* back button rails way

* filter groups to field groups

* change back button to utllity button

* organizations#new styles

* organizaitons#show styles

* organizations#edit styles

* button fixes

* nix the hashrocket

--- a/dpc-web/app/assets/stylesheets/components/_field-groups.scss
+++ b/dpc-web/app/assets/stylesheets/components/_field-groups.scss
@@ -1,19 +1,22 @@
-.filter-group {
+.field-group {
+  box-sizing: border-box;
+  border: none;
+  margin: 0;
   padding: 0;
 }
 
-.filter-group__heading {
+.field-group__heading {
   font-size: $h4-font-size;
   font-weight: $font-bold;
   padding: $spacer-4 0;
 }
 
-.filter-group__fields {
+.field-group__fields {
   border-bottom: 1px solid $color-gray-light;
   padding: $spacer-4 0;
 }
 
-.filter-group__hint {
+.field-group__hint {
   color: $color-gray;
   margin-bottom: 0;
 }
