--- a/dpc-web/app/views/internal/users/show.html.erb
+++ b/dpc-web/app/views/internal/users/show.html.erb
@@ -53,7 +53,13 @@
 
     <div class="box__content">
       <h2 class="box__heading">Assigned organization</h2>
-      <p class="ds-u-color--muted">You have not assigned an organization to this person yet.</p>
+      <% if @user.organization %>
+        <%= @user.organization_name %>
+        <%= @user.organization_organization_type.titleize %>
+      <% else %>
+        <p class="ds-u-color--muted">You have not assigned an organization to this person yet.</p>
+        <%= link_to "Assign an organization", edit_internal_user_url %>
+      <% end %>
     </div>
   </section>
 
@@ -99,7 +105,7 @@
           <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <use xlink:href="/assets/solid.svg#shapes"></use>
           </svg>
-          <%= @user.organization_type.titleize %>
+          <%= @user.requested_organization_type.titleize %>
         </div>
 
         <div>
