style assigned users in index

--- a/dpc-web/app/assets/stylesheets/components/_module-containers.scss
+++ b/dpc-web/app/assets/stylesheets/components/_module-containers.scss
@@ -81,3 +81,9 @@
   color: $color-warn-alt;
   font-weight: $font-bold;
 }
+
+.module-container__indicator--success {
+  background-color: $color-success-alt-lightest;
+  color: $color-success;
+  font-weight: $font-bold;
+}
