--- a/dpc-web/app/assets/stylesheets/settings/_variables.scss
+++ b/dpc-web/app/assets/stylesheets/settings/_variables.scss
@@ -3,6 +3,7 @@ $color-warn-alt: #e27100;
 $color-warn-alt-light: rgba($color-warn-lightest, .9);
 $color-primary-alt-dark: #004972;
 $color-gray-ultra-light: #f6f6f6;
+$color-success-alt-lightest: rgba($color-success-lightest, .9);
 
 // Focus
 $focus-outline:  5px solid $color-gold-light;
