Add api_environments to organizations
Update organizations UI to support api_environments

* Filter input for api_environments to make sure all incoming values
  are arrays without blank items
* Add feature specs

--- a/dpc-web/app/views/internal/organizations/_fields.html.erb
+++ b/dpc-web/app/views/internal/organizations/_fields.html.erb
@@ -17,6 +17,11 @@
     min: 0, class: "ds-c-field ds-c-field--small" %>
 </div>
 
+<div class="field">
+  <%= f.label :api_environments, "Environments", class: "ds-c-label" %>
+  <%= f.collection_check_boxes :api_environments, Organization::API_ENVIRONMENTS, :first, :second %>
+</div>
+
 <div>
   <%= f.fields_for :address do |ff| %>
     <%= ff.label :street, class: "ds-c-label" %>
