DPC-684 - As an internal user, I want to assign users to an organization. (#260)
* User belongs_to Organization

* Add association between user and organization. Make this optional
  because new users won't have an organization, only a requested one
* Refactor existing User column names (organization, organization_type,
  num_providers) to have `requested_` prefix, because those are user-
  input values and are technically requests, not fact.

* Assign user to an organization

* User belongs_to Organization

* Add association between user and organization. Make this optional
  because new users won't have an organization, only a requested one
* Refactor existing User column names (organization, organization_type,
  num_providers) to have `requested_` prefix, because those are user-
  input values and are technically requests, not fact.

* Add functionality to user nav items

I'm not a big fan of how I'm setting the "current" class for the
assigned/unassigned sub-nav items, but it works for now.

* style assigned org box on users#show

* WIP user search refactor

* style assigned users in index

* improve assigning orgs hint and correct label for attribute

* left nav css fix

* WIP User org association refactoring

* Resolve ambiguous column error

* Abide by the rubocop

* Fix rebase schema

* Refactor keyword search to be a User scope

* These should be scopes anyway per convention
* Adds tests for the scope
* Fixes too-long-of-line error from rubocop

--- a/dpc-web/app/views/internal/users/index.html.erb
+++ b/dpc-web/app/views/internal/users/index.html.erb
@@ -10,6 +10,7 @@
     <h1 class="ds-h1">Viewing <strong><%= @users.total_count %></strong> provider users</h1>
     <p class=""><%= page_entries_info @users %></p>
     <%= form_tag internal_users_path, method: "get", class: "ds-u-display--flex" do %>
+      <%= hidden_field_tag :org_status, params[:org_status] %>
       <%= text_field_tag :keyword, params[:keyword], placeholder: "first name, last name, or email", class: "ds-c-field ds-u-margin--0" %>
       <%= submit_tag "Search", data: { test: 'users-keyword-search-submit' }, class: "ds-c-button ds-c-button--primary ds-u-margin-left--1" %>
     <% end %>
@@ -53,25 +54,47 @@
           </div>
         </div>
         <div class="module-container__secondary">
-          <div class="module-container__indicator module-container__indicator--warn">Requested organization</div>
+          <% if user.primary_organization %>
+          <div class="module-container__indicator module-container__indicator--success">Assigned organization</div>
           <div class="module-container__content-wrap">
             <div>
               <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <use xlink:href="/assets/solid.svg#clinic-medical"></use>
               </svg>
-              <%= user.organization %> </div>
+              <%= user.primary_organization.name %> </div>
             <div>
               <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <use xlink:href="/assets/solid.svg#shapes"></use>
               </svg>
-              <%= user.organization_type.titleize %> </div>
+              <%= user.primary_organization.organization_type.titleize %></div>
             <div>
               <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <use xlink:href="/assets/solid.svg#map-marker-alt"></use>
               </svg>
-              <%= city_state(user) %>
+              <%= user.primary_organization.address_city %>, <%= user.primary_organization.address_state %>
             </div>
           </div>
+          <% else %>
+            <div class="module-container__indicator module-container__indicator--warn">Requested organization</div>
+            <div class="module-container__content-wrap">
+              <div>
+                <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                <use xlink:href="/assets/solid.svg#clinic-medical"></use>
+                </svg>
+                <%= user.requested_organization %> </div>
+              <div>
+                <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                <use xlink:href="/assets/solid.svg#shapes"></use>
+                </svg>
+                <%= user.requested_organization_type.titleize %> </div>
+              <div>
+                <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                <use xlink:href="/assets/solid.svg#map-marker-alt"></use>
+                </svg>
+                <%= city_state(user) %>
+              </div>
+            </div>
+          <% end %>
         </div>
       </div>
     <% end %>
