--- a/dpc-web/app/views/internal/users/show.html.erb
+++ b/dpc-web/app/views/internal/users/show.html.erb
@@ -53,7 +53,42 @@
 
     <div class="box__content">
       <h2 class="box__heading">Assigned organization</h2>
-      <p class="ds-u-color--muted">You have not assigned an organization to this person yet.</p>
+      <% if @user.organizations.present? %>
+        <% @user.organizations.each do |org| %>
+          <div class="ds-u-margin-bottom--1">
+            <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <use xlink:href="/assets/solid.svg#clinic-medical"></use>
+            </svg>
+            <%= org.name %>
+          </div>
+
+          <div class="ds-u-margin-bottom--1">
+            <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <use xlink:href="/assets/solid.svg#shapes"></use>
+            </svg>
+            <%= org.organization_type.titleize %>
+          </div>
+
+          <div>
+            <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <use xlink:href="/assets/solid.svg#map-marker-alt"></use>
+            </svg>
+            <%= org.address_street %>
+          </div>
+
+          <% if org.address_street_2.present? %>
+            <div class="ds-u-padding-x--3">
+              <%= org.address_street_2 %>
+            <div>
+          <% end %>
+          <div class="ds-u-padding-x--3">
+            <%= org.address_city %>, <%= org.address_state %> <%= org.address_zip %>
+          </div>
+        <% end %>
+      <% else %>
+        <p class="ds-u-color--muted">You have not assigned an organization to this person yet.</p>
+        <%= link_to "Assign an organization", edit_internal_user_url, class: "ds-c-button" %>
+      <% end %>
     </div>
   </section>
 
@@ -83,15 +118,15 @@
             <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <use xlink:href="/assets/solid.svg#clinic-medical"></use>
             </svg>
-            <%= @user.organization %>
+            <%= @user.requested_organization %>
           </div>
 
-        <% unless @user.organization_type == "health_it_vendor" %>
+        <% unless @user.requested_organization_type == "health_it_vendor" %>
           <div class="ds-u-margin-bottom--1">
             <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
               <use xlink:href="/assets/solid.svg#users"></use>
             </svg>
-            <%= @user.num_providers %>
+            <%= @user.requested_num_providers %>
           </div>
         <% end %>
 
@@ -99,14 +134,13 @@
           <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <use xlink:href="/assets/solid.svg#shapes"></use>
           </svg>
-          <%= @user.organization_type.titleize %>
+          <%= @user.requested_organization_type.titleize %>
         </div>
 
         <div>
           <svg class="icon ds-u-margin-right--1 ds-u-color--muted" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <use xlink:href="/assets/solid.svg#map-marker-alt"></use>
           </svg>
-
           <%= @user.address_1 %>
         </div>
 
