Remove DpcRegistration model
This wasn't really being used. I think it had been originally intended
as the model where API access and account info would be stored, but
now that logic is tied to organization rather than user so it doesn't
make sense to continue with this model which is tied to user.

This commit also adds dependent: :destroy to
organization_user_assignments in both Organization and User, as that
was an oversight previously. We want to make sure the assignment records
are deleted when the user or org is deleted.

--- a/dpc-web/app/views/dashboard/show.html.erb
+++ b/dpc-web/app/views/dashboard/show.html.erb
@@ -1,11 +1,11 @@
-<% title "Welcome, #{@dpc_registration.user.first_name}!" %>
+<% title "Welcome, #{@user.first_name}!" %>
 
 <h1 class="ds-u-font-size--title ds-u-font-weight--normal ds-u-margin--0">Welcome, <%= @dpc_registration.user.first_name %>!</h1>
 
 <section class="box">
   <div class="box__content">
     <div>
-      <% if @dpc_registration.access_level == "no_access" %>
+      <% if @user.unassigned? %>
       <span class="ds-c-badge ds-c-badge--warn ds-u-font-size--base">Access requested</span>
       <% end %>
     </div>
